--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,64 @@
     <string name="app_name">Energy Saving App(New)</string>
     <string name="new_user_signup">New User? <b>SignUp</b></string>
     <string name="predicted_bill">Predicted bill for next month: Rs.%.2f</string>
+
+    <!--    pasindu-->
+    <string name="insertSource">Insert Renewable Sources</string>
+    <string name="fetchSource">Fetch Renewable Source</string>
+    <string name="enterRating">Enter Rating</string>
+    <string name="enterSource">Enter Renewable Source</string>
+    <string name="enterContent">Enter Source Content</string>
+    <string name="saveSourceData">Save Data</string>
+    <string name="recommendedUsageAmount">Recommended Usage Amount</string>
+    <string name="enterExpectedBillAmount">Enter expected bill amount</string>
+    <string name="usableUnitsAmount">No of used units</string>
+    <string name="billAmount">Bill Amount</string>
+    <string name="noOfUnits">No of units used</string>
+    <string name="numOfElectricItemsUse">Num of Electric items use</string>
+    <string name="items">Items</string>
+    <string name="piorityOfItems">Priority level of items</string>
+    <string name="piorityOne">Level 1</string>
+    <string name="piorityTwo">Level 2</string>
+    <string name="piorityThree">Level 3</string>
+    <string name="unitUsage">Usage Amount of units</string>
+    <string name="usage1">Usage</string>
+    <string name="usage2">Usage</string>
+    <string name="usage3">Usage</string>
+    <string name="enterBillAmount">Enter Bill Amount</string>
+    <string name="energySaverTopic">Energy Saver</string>
+    <string name="hRecUsage">Recommended Usage</string>
+    <string name="hOutageMaps">Outage Maps</string>
+    <string name="hSavingTips">Energy Saving Tips</string>
+    <string name="hRenewEnergy">Renewable Energy</string>
+    <string name="carbonPrint">Carbon Foot Print Calculator</string>
+    <string name="home">Home</string>
+    <string name="eBill">Electricity Bill Calculator</string>
+    <string name="adminRenew">Admin DashBoard</string>
+    <string name="count1">count</string>
+    <string name="count2">count</string>
+    <string name="count3">count</string>
+    <string name="reNewInsert">Insert Data</string>
+    <string name="dashRenw">Renewable Sources Admin</string>
+    <string name="billPredictor">Bill Predictor</string>
+    <string name="econsCal">E-Consumption Calulator</string>
+    <string name="energySavingTips">Energy Saving Tips</string>
+    <string name="addTips">Add Tips</string>
+    <string name="fetchTips">All Tips</string>
+    <string name="insertTip">Insert Tip</string>
+    <string name="tipName">Tip Name</string>
+    <string name="enterTipName">Enter Tip Name</string>
+    <string name="tipDescription">Tip Description</string>
+    <string name="enterTipDescription">Enter Tip Description</string>
+    <string name="saveTip">Save Tip</string>
+    <string name="tipId">Tip ID</string>
+    <string name="TipName">Tip Name</string>
+    <string name="TipDescription">Tip Description</string>
+    <string name="CalcElectricBill">Calculate Electricity Bill</string>
+    <string name="numOfUnits">Number of electric units used :</string>
+    <string name="numOfUnitsHint">Num of units used</string>
+    <string name="btnCalculateBill">Calculate</string>
+    <string name="billAmountLbl">Bill amount</string>
+    <string name="recProducts">Recommended Products</string>
+    <string name="insertTIpAdmin">Insert Tip</string>
+    <string name="allTipsAdmin">All Tips</string>
 </resources>
